--- a/38-probna-aplikacija/views/greska.html
+++ b/38-probna-aplikacija/views/greska.html
@@ -1,8 +1,11 @@
-<div id="error">There was an error getting the profile for new. (Not Found)</div>
+<div id="error">{{errorMessage}}</div>
 
 <img src="http://i.imgur.com/VKKm0pn.png" alt="Magnifying Glass" id="searchIcon">
 
 <form action="/" method="POST">
     <input type="text" placeholder="Enter a Treehouse username" id="username" name="username">
-    <input type="submit" value="submit" class="button">
+    <input type="submit" value="search" class="button">
 </form>
+
+</body>
+</html>
